view of vendor details ui added

--- a/medicalapp/templates/medicalapp/index.htm
+++ b/medicalapp/templates/medicalapp/index.htm
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% include 'snippets/header.htm'%}
-
+{%include 'snippets/prescription.htm' %}
 <!-- slider -->
 <div class="hero-slider">
 	<div class="slider-item th-fullpage hero-area" style="background-image: url('static/images/slider/slider-1.jpg');">
@@ -54,7 +54,7 @@
 					<a href="#!">
 						<img src= {% static 'images/shop/category/category-1.jpg' %} alt="" />
 						<div class="content">
-							<h3>Clothes Sales</h3>
+							<h3>Device</h3>
 							<p>Shop New Season Clothing</p>
 						</div>
 					</a>	
@@ -63,7 +63,7 @@
 					<a href="#!">
 						<img src= {% static 'images/shop/category/category-2.jpg' %} alt="" />
 						<div class="content">
-							<h3>Smart Casuals</h3>
+							<h3>Hygenic</h3>
 							<p>Get Wide Range Selection</p>
 						</div>
 					</a>	
@@ -74,7 +74,7 @@
 					<a href="#!">
 						<img src= {% static 'images/shop/category/category-3.jpg' %} alt="" />
 						<div class="content">
-							<h3>Jewellery</h3>
+							<h3>Medicine</h3>
 							<p>Special Design Comes First</p>
 						</div>
 					</a>	
