--- a/templates/snippets/footer1.htm
+++ b/templates/snippets/footer1.htm
@@ -3,9 +3,9 @@
         <div class="row">
         <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
             <h4 class="mb-4">Contact</h4>
-            <p>20464 Hirthe Curve Suite, Emardton, CT 12471-4107</p>
-            <p>+5(305) 785-0437</p>
-            <p>info@example.com</p>
+            <p>Balkumari, lalitpur Nepal</p>
+            <p>+025-700-0437</p>
+            <p>E.medHouse@gmail.com</p>
             <ul class="list-inline social-icons">
             <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
             <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
@@ -16,17 +16,14 @@
         <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
             <h4 class="mb-4">Category</h4>
             <ul class="pl-0 list-unstyled">
-            <li class="mb-2"><a class="text-color"assets/ href=.htm">Men</a></li>
-            <li class="mb-2"><a class="text-color"assets/ href=.htm">Women</a></li>
-            <li class="mb-2"><a class="text-color"assets/ href=.htm">Kids</a></li>
-            <li class="mb-2"><a class="text-color"assets/ href=.htm">Accessories</a></li>
-            <li class="mb-2"><a class="text-color"assets/ href=.htm">Shoe</a></li>
+            <li class="mb-2"><a class="text-color"assets/ href=.htm">Medicine</a></li>
+            <li class="mb-2"><a class="text-color"assets/ href=.htm">Device</a></li>
+            <li class="mb-2"><a class="text-color"assets/ href=.htm">Hygenic</a></li>
             </ul>
         </div>
         <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
             <h4 class="mb-4">Useful Link</h4>
             <ul class="pl-0 list-unstyled">
-            <li class="mb-2"><a class="text-color" href="about.htm">News & Tips</a></li>
             <li class="mb-2"><a class="text-color" href="about.htm">About Us</a></li>
             <li class="mb-2"><a class="text-color" href="address.htm">Support</a></li>
             <li class="mb-2"><a class="text-color"assets/ href=.htm">Our Shop</a></li>
@@ -40,7 +37,6 @@
             <li class="mb-2"><a class="text-color" href="404.htm">Terms & Conditions</a></li>
             <li class="mb-2"><a class="text-color" href="404.htm">Cookie Policy</a></li>
             <li class="mb-2"><a class="text-color" href="404.htm">Terms of Sale</a></li>
-            <li class="mb-2"><a class="text-color" href="dashboard.htm">Free Shipping & Returns</a></li>
             </ul>
         </div>
         </div>
