--- a/customer/templates/customer/shop-customer-side.htm
+++ b/customer/templates/customer/shop-customer-side.htm
@@ -25,7 +25,7 @@
 		<div class="row">
 			<div class="col-md-3">
 				<div class="widget">
-					<h4 class="widget-title">Short By</h4>
+					<h4 class="widget-title">Sort By</h4>
 					<form method="post" action="#">
                         <select class="form-control">
                             <option>Man</option>
@@ -42,7 +42,7 @@
 						    <div class="panel-heading" role="tab" id="headingOne">
 						      	<h4 class="panel-title">
 						        	<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-						          	Shoes
+						          	Medicine
 						        	</a>
 						      	</h4>
 						    </div>
@@ -60,7 +60,7 @@
 					    <div class="panel-heading" role="tab" id="headingTwo">
 					      <h4 class="panel-title">
 					        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-					         	Duty Wear
+					         	Device
 					        </a>
 					      </h4>
 					    </div>
@@ -78,7 +78,7 @@
 					    <div class="panel-heading" role="tab" id="headingThree">
 					      <h4 class="panel-title">
 					        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-					          	WorkOut Shoes
+					          	Hygenic
 					        </a>
 					      </h4>
 					    </div>
