--- a/templates/snippets/vendors.htm
+++ b/templates/snippets/vendors.htm
@@ -1,5 +1,5 @@
 {% load static %}
-
+{%include 'snippets/prescription.htm' %}
 <!-- doctor 1 -->
 <hr>
 <section class="about section">
@@ -9,7 +9,7 @@
                 <img class="img-responsive mt-50" src={% static 'images/doctors/doctor1.jpg' %}>
             </div>
             <div class="col-xs-12 col-md-6 mt-30">
-                <h3>Hamro 24 hours Pharmacy</h3>
+                <h3><a href="/customer/vendor-details"> Hamro 24 hours Pharmacy</a></h3>
                 <p class="text-info">Specialization: Consultation for Skin and Hair(छाला र कपाल सामस्याको परामार्श),Consultation for Nails and STD(नड़ र यौन संक्रमित रोग)</p>
                 <dl class="dl-horizontal">
                     <dt>Name:</dt>
@@ -39,7 +39,7 @@
                 <img class="img-responsive mt-50" src={% static 'images/doctors/doctor2.jpg' %}>
             </div>
             <div class="col-xs-12 col-md-6 mt-30">
-                <h3>Hamro 24 hours Pharmacy</h3>
+                <h3><a href="/customer/vendor-details"> Hamro 24 hours Pharmacy</a></h3>
                 <p class="text-info">Specialization: Consultation for Skin and Hair(छाला र कपाल सामस्याको परामार्श),Consultation for Nails and STD(नड़ र यौन संक्रमित रोग)</p>
                 <dl class="dl-horizontal">
                     <dt>Name:</dt>
@@ -67,7 +67,7 @@
                 <img class="img-responsive mt-50" src={% static 'images/doctors/doctor3.jpg' %}>
             </div>
             <div class="col-xs-12 col-md-6 mt-30">
-                <h3>Hamro 24 hours Pharmacy</h3>
+                <h3><a href="/customer/vendor-details"> Hamro 24 hours Pharmacy</a></h3>
                 <p class="text-info">Specialization: Consultation for Skin and Hair(छाला र कपाल सामस्याको परामार्श),Consultation for Nails and STD(नड़ र यौन संक्रमित रोग)</p>
                 <dl class="dl-horizontal">
                     <dt>Name:</dt>
@@ -95,7 +95,7 @@
                 <img class="img-responsive mt-50" src={% static 'images/doctors/doctor4.jpg' %}>
             </div>
             <div class="col-xs-12 col-md-6 mt-30">
-                <h3>Hamro 24 hours Pharmacy</h3>
+                <h3><a href="/customer/vendor-details"> Hamro 24 hours Pharmacy</a></h3>
                 <p class="text-info">Specialization: Consultation for Skin and Hair(छाला र कपाल सामस्याको परामार्श),Consultation for Nails and STD(नड़ र यौन संक्रमित रोग)</p>
                 <dl class="dl-horizontal">
                     <dt>Name:</dt>
