--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -64,8 +64,8 @@
                                 <span class="total-price">$1799.00</span>
                             </div>
                             <ul class="text-center cart-buttons">
-                                <li><a href="/cart.htm" class="btn btn-small">View Cart</a></li>
-                                <li><a href="checkout.htm" class="btn btn-small btn-solid-border">Checkout</a></li>
+                                <li><a href="/cart/cart" class="btn btn-small">View Cart</a></li>
+                                <li><a href="/order/checkout" class="btn btn-small btn-solid-border">Checkout</a></li>
                             </ul>
                         </div>
 
