--- a/customer/templates/customer/vendor-details.htm
+++ b/customer/templates/customer/vendor-details.htm
@@ -30,11 +30,175 @@
                         <li><span>Date of Birth:</span>{{vendor.dob}}</li>
                         <li><span>Address:</span>{{vendor.address}}</li>
                     </ul>
-                    <hr>
                 </div>
             </div>
         </div>
-  
+            
+        <div class="products">
+            <div class="container">
+                <h3>Products</h3>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="product-item">
+                            <div class="product-thumb">
+                                <img class="img-responsive" src={% static 'images/shop/products/product-4.jpg' %} alt="product-img" />
+                                <div class="preview-meta">
+                                    <ul>
+                                        <li>
+                                            <span  data-toggle="modal" data-target="#product-modal">
+                                                <i class="tf-ion-ios-search-strong"></i>
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="product-content">
+                                <h4><a href="product-single.htm">Bradley Mid</a></h4>
+                                <p class="price">$200</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product-item">
+                            <div class="product-thumb">
+                                <img class="img-responsive" src={% static 'images/shop/products/product-5.jpg' %} alt="product-img" />
+                                <div class="preview-meta">
+                                    <ul>
+                                        <li>
+                                            <span  data-toggle="modal" data-target="#product-modal">
+                                                <i class="tf-ion-ios-search-strong"></i>
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="product-content">
+                                <h4><a href="product-single.htm">Rainbow Shoes</a></h4>
+                                <p class="price">$200</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product-item">
+                            <div class="product-thumb">
+                                <img class="img-responsive" src={% static 'images/shop/products/product-6.jpg' %} alt="product-img" />
+                                <div class="preview-meta">
+                                    <ul>
+                                        <li>
+                                            <span  data-toggle="modal" data-target="#product-modal">
+                                                <i class="tf-ion-ios-search-strong"></i>
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="product-content">
+                                <h4><a href="product-single.htm">Rainbow Shoes</a></h4>
+                                <p class="price">$200</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product-item">
+                            <div class="product-thumb">
+                                <span class="bage">Sale</span>
+                                <img class="img-responsive" src={% static 'images/shop/products/product-7.jpg' %} alt="product-img" />
+                                <div class="preview-meta">
+                                    <ul>
+                                        <li>
+                                            <span  data-toggle="modal" data-target="#product-modal">
+                                                <i class="tf-ion-ios-search-strong"></i>
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="product-content">
+                                <h4><a href="product-single.htm">Rainbow Shoes</a></h4>
+                                <p class="price">$200</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product-item">
+                            <div class="product-thumb">
+                                <img class="img-responsive" src={% static 'images/shop/products/product-8.jpg' %} alt="product-img" />
+                                <div class="preview-meta">
+                                    <ul>
+                                        <li>
+                                            <span  data-toggle="modal" data-target="#product-modal">
+                                                <i class="tf-ion-ios-search-strong"></i>
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="product-content">
+                                <h4><a href="product-single.htm">Rainbow Shoes</a></h4>
+                                <p class="price">$200</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="product-item">
+                            <div class="product-thumb">
+                                <img class="img-responsive" src={% static 'images/shop/products/product-9.jpg' %} alt="product-img" />
+                                <div class="preview-meta">
+                                    <ul>
+                                        <li>
+                                            <span  data-toggle="modal" data-target="#product-modal">
+                                                <i class="tf-ion-ios-search-strong"></i>
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <a href="#" ><i class="tf-ion-ios-heart"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#!"><i class="tf-ion-android-cart"></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="product-content">
+                                <h4><a href="product-single.htm">Rainbow Shoes</a></h4>
+                                <p class="price">$200</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!--end of product-->>
+
     </div>
 </section>
 
