--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -104,17 +104,6 @@
                     </li>
                     <!-- / account -->
 
-                    <!-- Languages -->
-                    <!-- <li class="commonSelect">
-                        <select class="form-control">
-                            <option>EN</option>
-                            <option>DE</option>
-                            <option>FR</option>
-                            <option>ES</option>
-                        </select>
-                    </li> -->
-                    <!-- / Languages -->
-
                 </ul><!-- / .nav .navbar-nav .navbar-right -->
             </div>
         </div>
@@ -230,58 +219,11 @@
             <!--/.navbar-collapse -->
 
             <!-- prescription Doctor -->
-            <span class="li" ><a href="#!" class="btn btn-main btn-small btn-round-full btn-pre" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></button>
+            <!-- <span class="li" ><a href="#!" class="btn btn-main btn-small btn-round-full btn-pre" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></button> -->
             <!-- <span class="li dropdown dropdown-slide" style="margin-top: 20px;">
                 <a href="/product/signup" class="btn btn-secondary btn-small btn-round-full btn-pre" ><i class="></i> Add Product</a>
             </span> -->
 <!-- / Elements -->
-
-                        
-            <!-- .modal -->
-            <div class="modal fade" id="MySecondmodal">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">×</button> 
-                            <h4 class="modal-title">Upload Prescription</h4>                                                             
-                            <hr>
-                            <div class="modal-body">
-                                <div class="card-block">
-                                    <div class="text-center m-t-20">
-                                        <input type="file" id="fileupload" style="display:none"/> 
-                                        <button class="btn-css btn btn-primary" id="OpenfileUpload">click to upload</button>
-                                    </div>
-                                </div>
-                                <hr>
-                                <div class="text-center">
-                                    OR
-                                </div>
-                                <hr>
-                                <form>
-                                    <label for="subject">Text Prescription</label>
-                                    <textarea id="subject" name="subject" placeholder="Prescription with Description.." style="height:200px"></textarea>
-                                
-                                    <label for="fname">Location</label>
-                                    <input type="text" id="location" name="location" placeholder="Your address.">
-
-                                    <label for="lname">Contact</label>
-                                    <input type="number" id="contact" name="contact" placeholder="Your contact..">
-                                </form>
-                        
-                                You need to register First.
-
-                                <div class="text-center">
-                                    <button class="btn-css btn btn-primary">Submit</button>
-                                </div> 
-                            </div>  
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
-                        </div>
-                    </div> 
-                </div>                                                                      
-            </div>  
-
         </div><!-- / .container -->
     </nav>
 </section>
