--- a/templates/snippets/product-model.htm
+++ b/templates/snippets/product-model.htm
@@ -21,8 +21,8 @@
                             <p class="product-short-description">
                                 {{image.product.description}}
                             </p>
-                            <a href="cart.htm" class="btn btn-main">Add To Cart</a>
-                            <a href="product-single.htm" class="btn btn-transparent">View Product Details</a>
+                            <a href="/cart/add/{{image.product.id}}" class="btn btn-main">Add To Cart</a>
+                            <a href="/product/shop/detail/{{image.product.id}}" class="btn btn-transparent">View Product Details</a>
                         </div>
                     </div>
                 </div>
