--- a/product/templates/product/shop.htm
+++ b/product/templates/product/shop.htm
@@ -25,112 +25,53 @@
 		<div class="row">
 			<div class="col-md-3">
 				<div class="widget">
-					<h4 class="widget-title">Short By</h4>
-					<form method="post" action="#">
-                        <select class="form-control">
-                            <option>Man</option>
-                            <option>Women</option>
-                            <option>Accessories</option>
-                            <option>Shoes</option>
-                        </select>
+					<form method="post" action="/product/shop/">
+						{% csrf_token %}
+						<h4 class="widget-title">Category</h4>
+							<select class="form-control" name='product_type'>
+								<option key=''> Search by category </option>
+								<option key='medicine'> Medicine</option>
+								<option key='device'>Device</option>
+								<option key='hygenic_product'>Hygenic Product </option>
+							</select>
+							<input class="form-control mr-sm-2" type="search" placeholder="Search by name of product" aria-label="Search" name="">
+							<button class="btn btn-outline-success my-2 my-sm-0 mt-10" type="submit">Search</button>
                     </form>
 	            </div>
-				<div class="widget product-category">
-					<h4 class="widget-title">Categories</h4>
-					<div class="panel-group commonAccordion" id="accordion" role="tablist" aria-multiselectable="true">
-					  	<div class="panel panel-default">
-						    <div class="panel-heading" role="tab" id="headingOne">
-						      	<h4 class="panel-title">
-						        	<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-						          	Shoes
-						        	</a>
-						      	</h4>
-						    </div>
-					    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-							<div class="panel-body">
-								<ul>
-									<li><a href="#!">Brand & Twist</a></li>
-									<li><a href="#!">Shoe Color</a></li>
-									<li><a href="#!">Shoe Color</a></li>
-								</ul>
-							</div>
-					    </div>
-					  </div>
-					  <div class="panel panel-default">
-					    <div class="panel-heading" role="tab" id="headingTwo">
-					      <h4 class="panel-title">
-					        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-					         	Duty Wear
-					        </a>
-					      </h4>
-					    </div>
-					    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-					    	<div class="panel-body">
-					     		<ul>
-									<li><a href="#!">Brand & Twist</a></li>
-									<li><a href="#!">Shoe Color</a></li>
-									<li><a href="#!">Shoe Color</a></li>
-								</ul>
-					    	</div>
-					    </div>
-					  </div>
-					  <div class="panel panel-default">
-					    <div class="panel-heading" role="tab" id="headingThree">
-					      <h4 class="panel-title">
-					        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-					          	WorkOut Shoes
-					        </a>
-					      </h4>
-					    </div>
-					    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-					    	<div class="panel-body">
-					      		<ul>
-									<li><a href="#!">Brand & Twist</a></li>
-									<li><a href="#!">Shoe Color</a></li>
-									<li><a href="#!">Gladian Shoes</a></li>
-									<li><a href="#!">Swis Shoes</a></li>
-								</ul>
-					    	</div>
-					    </div>
-					  </div>
-					</div>
-					
-				</div>
 			</div>
 			<div class="col-md-9">
 				<div class="row">
-			{% for image in images %}		
-				<div class="col-md-4">
-					<div class="product-item">
-						<div class="product-thumb">
-							<span class="bage">Sale</span>
-							<img class="img-responsive" src="/media/{{image.image}}" alt={{image.description}} />
-							<div class="preview-meta">
-								<ul>
-									<li>
-										<span  data-toggle="modal" data-target="#product-modal_{{ forloop.counter0 }}">
-											<i class="tf-ion-ios-search-strong"></i>
-										</span>
-									</li>
-									<!-- <li>
-										<a href="#!" ><i class="tf-ion-ios-heart"></i></a>
-									</li> -->
-									<li>
-										<a href="#!"><i class="tf-ion-android-cart"></i></a>
-									</li>
-								</ul>
+					{% for image in images %}		
+						<div class="col-md-4">
+							<div class="product-item">
+								<div class="product-thumb">
+									<span class="bage">Sale</span>
+									<img class="img-responsive" src="/media/{{image.image}}" alt={{image.description}} />
+									<div class="preview-meta">
+										<ul>
+											<li>
+												<span  data-toggle="modal" data-target="#product-modal_{{ forloop.counter0 }}">
+													<i class="tf-ion-ios-search-strong"></i>
+												</span>
+											</li>
+											<li>
+												<a href="/cart/add/{{image.product.id}}"><i class="tf-ion-android-cart"></i></a>
+											</li>
+										</ul>
+									</div>
+								</div>
+								<div class="product-content">
+									<h4><a href="product-single.htm">{{image.product.title}}</a></h4>
+									<p class="price">Rs.{{image.product.price}}</p>
+								</div>
 							</div>
-						</div>
-						<div class="product-content">
-							<h4><a href="product-single.htm">{{image.product.title}}</a></h4>
-							<p class="price">Rs.{{image.product.price}}</p>
-						</div>
-					</div>
-					{% include 'snippets/product-model.htm' %}
+						</div>	
+					{% endfor %}
 				</div>
-			{% endfor %}
-	
-		
+				{% for image in images %}		
+					{% include 'snippets/product-model.htm' %}
+				{% endfor %}
+			</div>
 		</div>
 	</div>
 </section>
