--- a/customer/templates/customer/order.htm
+++ b/customer/templates/customer/order.htm
@@ -123,7 +123,7 @@
                                 </div><!-- / Elements -->
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn-css btn btn-primary" data-dismiss="modal">update</button>                               
+                <button type="button" class="btn-css btn btn-secondory" data-dismiss="modal">close</button>                               
             </div>
         </div> 
     </div>                                                                      
