--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -97,6 +97,9 @@
             <div id="navbar" class="navbar-collapse collapse text-center">
                 <ul class="nav navbar-nav">
 
+                    <li class="dropdown">
+                        <a href="/customer/dashboard">Dashboard</a>
+                    </li>
                     <!-- Home -->
                     <li class="dropdown ">
                         <a href="/product/shop">Shop</a>
