--- a/customer/templates/customer/profile-details.htm
+++ b/customer/templates/customer/profile-details.htm
@@ -18,11 +18,11 @@
                     <div class="media">
                         <div class="pull-left text-center" href="#!">
                             <img class="media-object user-img" src="/media/{{customer_img.image}}" alt="Profile image of {{customer.shop_name}}">
-                            <a class="btn btn-main mt-20" data-target="#MyProfileModal" data-toggle="modal">Edit <i class="tf-ion-edit"></i></a>
+                            <!-- <a class="btn btn-main mt-20" data-target="#MyProfileModal" data-toggle="modal">Edit <i class="tf-ion-edit"></i></a> -->
                         </div>
                         <div class="media-body">
                             <ul class="user-profile-list">
-                                <li>Customer Details</li>
+                                <h3 class="font-weight-bold ">Customer Details</h3>
                                 <li><span>Full Name:</span>{{customer.full_name}}</li>
                                 <li><span>Gender:</span>{{customer.gender}}</li>
                                 <li><span>Email:</span>{{customer.email}}</li>
