--- a/order/templates/order/checkout.htm
+++ b/order/templates/order/checkout.htm
@@ -37,7 +37,7 @@
                      </div>
                   </form>
                </div>
-               <div class="block">
+               <!-- <div class="block">
                   <h4 class="widget-title">Payment Method</h4>
                   <p>Credit Cart Details (Secure payment)</p>
                   <div class="checkout-product-details">
@@ -61,7 +61,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
+               </div> -->
             </div>
             <div class="col-md-4">
                <div class="product-checkout-details">
@@ -94,9 +94,9 @@
                         <span>Total</span>
                         <span>$250</span>
                      </div>
-                     <div class="verified-icon">
+                     <!-- <div class="verified-icon">
                         <img src={% static 'images/shop/verified.png' %}>
-                     </div>
+                     </div> -->
                   </div>
                </div>
             </div>
