--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -25,50 +25,7 @@
                 <!-- Cart -->
                 <ul class="top-menu text-right list-inline">
                     <li class="dropdown cart-nav dropdown-slide">
-                        <a href="#!" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"><i
-                                class="tf-ion-android-cart"></i>Cart</a>
-                        <div class="dropdown-menu cart-dropdown">
-                            <!-- Cart Item -->
-                            <div class="media">
-                                <a class="pull-left" href="#!">
-                                    <img class="media-object" src= {% static '/images/shop/cart/cart-1.jpg' %} alt="image" />
-                                </a>
-                                <div class="media-body">
-                                    <h4 class="media-heading"><a href="#!">Ladies Bag</a></h4>
-                                    <div class="cart-price">
-                                        <span>1 x</span>
-                                        <span>1250.00</span>
-                                    </div>
-                                    <h5><strong>$1200</strong></h5>
-                                </div>
-                                <a href="#!" class="remove"><i class="tf-ion-close"></i></a>
-                            </div><!-- / Cart Item -->
-                            <!-- Cart Item -->
-                            <div class="media">
-                                <a class="pull-left" href="#!">
-                                    <img class="media-object" src= {% static '/images/shop/cart/cart-2.jpg' %} alt="image" />
-                                </a>
-                                <div class="media-body">
-                                    <h4 class="media-heading"><a href="#!">Ladies Bag</a></h4>
-                                    <div class="cart-price">
-                                        <span>1 x</span>
-                                        <span>1250.00</span>
-                                    </div>
-                                    <h5><strong>$1200</strong></h5>
-                                </div>
-                                <a href="#!" class="remove"><i class="tf-ion-close"></i></a>
-                            </div><!-- / Cart Item -->
-
-                            <div class="cart-summary">
-                                <span>Total</span>
-                                <span class="total-price">$1799.00</span>
-                            </div>
-                            <ul class="text-center cart-buttons">
-                                <li><a href="/cart/cart" class="btn btn-small">View Cart</a></li>
-                                <li><a href="/order/checkout" class="btn btn-small btn-solid-border">Checkout</a></li>
-                            </ul>
-                        </div>
-
+                        <a href="/cart/list/" ><i class="tf-ion-android-cart"></i>Cart</a>
                     </li><!-- / Cart -->
                     <li>
                         <a href="/customer/logout/" class="btn btn-transparent">Log Out</a>
@@ -102,14 +59,14 @@
                     </li>
                     <!-- Home -->
                     <li class="dropdown ">
-                        <a href="/product/shop">Shop</a>
+                        <a href="/product/shop/">Shop</a>
                     </li><!-- / Home -->
 
                     <li class="dropdown">
-                        <a href="/customer/doctor">Doctor Consultation</a>
+                        <a href="/customer/doctor/">Doctor Consultation</a>
                     </li>
                     <li class="dropdown">
-                        <a href="/customer/vendors">Vendors</a>
+                        <a href="/customer/vendors/">Vendors</a>
                     </li>
                    
                 </ul><!-- / .nav .navbar-nav -->
