--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -52,7 +52,7 @@
                     </li>
                     <li class="#">
                         <a href="/vendor/login">
-                            <i class="tf-ion-android-person"></i>Vender</a>
+                            <i class="tf-ion-android-person"></i>Vendor</a>
                         </a>
                     </li>
                     <!-- / account -->
