--- a/cart/templates/cart/cart.htm
+++ b/cart/templates/cart/cart.htm
@@ -37,42 +37,21 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr class="">
-                      <td class="">
-                        <div class="product-info">
-                          <img width="80" src={% static 'images/shop/cart/cart-1.jpg' %} alt="" />
-                          <a href="#!">Sunglass</a>
-                        </div>
-                      </td>
-                      <td class="">$200.00</td>
-                      <td class="">
-                        <a class="product-remove" href="#!">Remove</a>
-                      </td>
-                    </tr>
-                    <tr class="">
-                      <td class="">
-                        <div class="product-info">
-                          <img width="80" src={% static 'images/shop/cart/cart-2.jpg' %} alt="" />
-                          <a href="#!">Airspace</a>
-                        </div>
-                      </td>
-                      <td class="">$200.00</td>
-                      <td class="">
-                        <a class="product-remove" href="#!">Remove</a>
-                      </td>
-                    </tr>
-                    <tr class="">
-                      <td class="">
-                        <div class="product-info">
-                          <img width="80" src={% static 'images/shop/cart/cart-3.jpg' %} alt="" />
-                          <a href="#!">Bingo</a>
-                        </div>
-                      </td>
-                      <td class="">$200.00</td>
-                      <td class="">
-                        <a class="product-remove" href="#!">Remove</a>
-                      </td>
-                    </tr>
+                    {% for item in cart_items %}
+                      <tr class="">
+                        <td class="">
+                          <div class="product-info">
+                            <img width="80" src="/media/{{item.image.image}}" alt="{{item.image.description}}" />
+                            <a href="#!">{{item.product.title}}</a>
+                          </div>
+                        </td>
+                        <td class="">{{item.unit_price}}</td>
+                        <td class="">
+                          <a class="product-remove" href="/cart/remove/{{item.id}}">Remove</a>
+                        </td>
+                      </tr>
+                    {% endfor %}
+
                   </tbody>
                 </table>
                 <a href="/order/checkout" class="btn btn-main pull-right">Checkout</a>
