--- a/product/templates/product/shop.htm
+++ b/product/templates/product/shop.htm
@@ -40,7 +40,7 @@
 	            </div>
 			</div>
 			<div class="col-md-9">
-				<div class="row">
+				<!-- <div class="row"> -->
 					{% for image in images %}		
 						<div class="col-md-4">
 							<div class="product-item">
@@ -67,7 +67,7 @@
 							</div>
 						</div>	
 					{% endfor %}
-
+			</div>	<!-- </div> -->
 		</div>
 	</div>
 </section>
