alignment at customer sigin form and content added at front page

--- a/customer/templates/customer/signin.htm
+++ b/customer/templates/customer/signin.htm
@@ -77,11 +77,12 @@
                 <button type="submit" class="btn btn-main text-center">Register Now</button>
               </div>
             </form>
-          
-                    <p class="mt-20">Already have an account ?<a href="/customer/login/"> Login</a></p>
-                    <p><a href="forget-password.htm"> Forgot your password?</a></p>
-                </div>
+            <div class="text-center">
+              <p class="mt-20">Already have an account ?<a href="/customer/login/"> Login</a></p>
+              <p><a href="forget-password.htm"> Forgot your password?</a></p>
             </div>
+
+          </div>
         </div>
     </div>
 </section>
