--- a/medicalapp/templates/medicalapp/index.htm
+++ b/medicalapp/templates/medicalapp/index.htm
@@ -10,9 +10,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 text-center">
-					<p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-					<h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-					<a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.htm">Shop Now</a>
+					<p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">SHOP</p>
+					<h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">Get experience of your <br> online Pharmacy.</h1>
+					<a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="/customer/login">Shop Now</a>
 				</div>
 			</div>
 		</div>
@@ -21,9 +21,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 text-left">
-					<p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-					<h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-					<a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.htm">Shop Now</a>
+					<p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">DOCTOR</p>
+					<h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">Book for doctor Consultation<br> with just one click.</h1>
+					<a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="/doctor">Doctor Consultation</a>
 				</div>
 			</div>
 		</div>
@@ -32,9 +32,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 text-right">
-					<p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-					<h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-					<a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.htm">Shop Now</a>
+					<p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">LAB</p>
+					<h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">lab reports and booking are <br> just a form away.</h1>
+					<a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="#">lab test</a>
 				</div>
 			</div>
 		</div>
@@ -55,7 +55,7 @@
 						<img src= {% static 'images/shop/category/category-1.jpg' %} alt="" />
 						<div class="content">
 							<h3>Device</h3>
-							<p>Shop New Season Clothing</p>
+							<p>Shop medical related devices here</p>
 						</div>
 					</a>	
 				</div>
@@ -64,7 +64,7 @@
 						<img src= {% static 'images/shop/category/category-2.jpg' %} alt="" />
 						<div class="content">
 							<h3>Hygenic</h3>
-							<p>Get Wide Range Selection</p>
+							<p>Your hygiene always our priority</p>
 						</div>
 					</a>	
 				</div>
@@ -75,7 +75,7 @@
 						<img src= {% static 'images/shop/category/category-3.jpg' %} alt="" />
 						<div class="content">
 							<h3>Medicine</h3>
-							<p>Special Design Comes First</p>
+							<p>multiple pharmacies always present to help your need</p>
 						</div>
 					</a>	
 				</div>
